Update Troubleshooting.md
Adds scripts for linux and macos to solve the headless issue with serialize plugin