@@ -124,6 +124,261 @@ In certain configurations, when using the [save statement](Statements#save) an e
 ## Saving SHP file raises an error
 If you encounter a runtime error while trying to save an SHP file multiple times, especially if the message is something like `Java error: I/O error ... FileNotFoundException...`, you can try going into your gama preferences and go to `Data and Operators` -> `Optimizations` -> `In-memory shapefile mapping [...]` and set it to false.
 
+## Running some models in headless raises an error
+It is possible that running some models using a component of GAMA called `serialize` in headless mode raises exceptions in GAMA 1.9.2. As far as we know, this mostly (only?) happens with experiments of type `record`. If the error you get looks similar to this:
+```
+java.lang.reflect.InaccessibleObjectException: Unable to make field private final byte[] java.lang.String.value accessible: module java.base does not "opens java.lang" to unnamed module @6ca6fa8b
+        at java.base/java.lang.reflect.AccessibleObject.checkCanSetAccessible(AccessibleObject.java:354)
+        at java.base/java.lang.reflect.AccessibleObject.checkCanSetAccessible(AccessibleObject.java:297)
+        at java.base/java.lang.reflect.Field.checkCanSetAccessible(Field.java:178)
+        at java.base/java.lang.reflect.Field.setAccessible(Field.java:172)
+        at org.nustaq.serialization.FSTClazzInfo.createFieldInfo(FSTClazzInfo.java:512)
+        at org.nustaq.serialization.FSTClazzInfo.createFields(FSTClazzInfo.java:368)
+        at org.nustaq.serialization.FSTClazzInfo.<init>(FSTClazzInfo.java:129)
+        at org.nustaq.serialization.FSTClazzInfoRegistry.getCLInfo(FSTClazzInfoRegistry.java:129)
+        at org.nustaq.serialization.FSTClazzNameRegistry.addClassMapping(FSTClazzNameRegistry.java:98)
+        at org.nustaq.serialization.FSTClazzNameRegistry.registerClassNoLookup(FSTClazzNameRegistry.java:85)
+        at org.nustaq.serialization.FSTClazzNameRegistry.registerClass(FSTClazzNameRegistry.java:81)
+        at org.nustaq.serialization.FSTConfiguration.addDefaultClazzes(FSTConfiguration.java:807)
+        at org.nustaq.serialization.FSTConfiguration.initDefaultFstConfigurationInternal(FSTConfiguration.java:477)
+        at org.nustaq.serialization.FSTConfiguration.createDefaultConfiguration(FSTConfiguration.java:472)
+        at org.nustaq.serialization.FSTConfiguration.createUnsafeBinaryConfiguration(FSTConfiguration.java:536)
+        at org.nustaq.serialization.FSTConfiguration.createUnsafeBinaryConfiguration(FSTConfiguration.java:530)
+        at ummisco.gama.serializer.implementations.FSTBinaryImplementation.<init>(FSTBinaryImplementation.java:36)
+        at ummisco.gama.serializer.experiment.ExperimentBackwardAgent._init_(ExperimentBackwardAgent.java:116)
+        at msi.gama.metamodel.agent.MinimalAgent.init(MinimalAgent.java:243)
+        at msi.gama.kernel.experiment.ExperimentAgent.init(ExperimentAgent.java:371)
+        at msi.gama.runtime.ExecutionScope.init(ExecutionScope.java:602)
+        at msi.gama.headless.listener.ServerExperimentController.schedule(ServerExperimentController.java:407)
+        at msi.gama.kernel.experiment.ExperimentAgent.schedule(ExperimentAgent.java:418)
+        at msi.gama.kernel.experiment.ExperimentPlan.open(ExperimentPlan.java:704)
+        at msi.gama.headless.core.Experiment.loadCurrentExperiment(Experiment.java:128)
+        at msi.gama.headless.core.Experiment.setup(Experiment.java:92)
+        at msi.gama.headless.job.ManualExperimentJob.loadAndBuildWithJson(ManualExperimentJob.java:140)
+        at msi.gama.headless.listener.ServerExperimentController.processUserCommand(ServerExperimentController.java:209)
+        at msi.gama.headless.listener.ServerExperimentController.directOpenExperiment(ServerExperimentController.java:320)
+        at msi.gama.headless.listener.LoadCommand.launchGamlSimulation(LoadCommand.java:119)
+        at msi.gama.headless.listener.LoadCommand.execute(LoadCommand.java:44)
+        at msi.gama.headless.listener.LoadCommand.execute(LoadCommand.java:1)
+        at msi.gama.headless.listener.CommandExecutor.lambda$1(CommandExecutor.java:73)
+        at java.base/java.lang.Thread.run(Thread.java:833)
+java.lang.NullPointerException: Cannot invoke "ummisco.gama.serializer.implementations.AbstractSerialisationImplementation.save(msi.gama.kernel.simulation.SimulationAgent)" because "this.conf" is null
+        at ummisco.gama.serializer.experiment.ExperimentBackwardAgent.step(ExperimentBackwardAgent.java:127)
+        at msi.gama.headless.core.Experiment.step(Experiment.java:151)
+        at msi.gama.headless.job.ManualExperimentJob.doStep(ManualExperimentJob.java:103)
+        at msi.gama.headless.listener.ServerExperimentController.step(ServerExperimentController.java:445)
+        at msi.gama.headless.listener.ServerExperimentController$MyRunnable.run(ServerExperimentController.java:100)
+        at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
+        at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
+        at java.base/java.lang.Thread.run(Thread.java:833)
+java.lang.NullPointerException: Cannot invoke "ummisco.gama.serializer.implementations.AbstractSerialisationImplementation.save(msi.gama.kernel.simulation.SimulationAgent)" because "this.conf" is nullSocket closed
+
+        at ummisco.gama.serializer.experiment.ExperimentBackwardAgent.step(ExperimentBackwardAgent.java:127)
+        at msi.gama.headless.core.Experiment.step(Experiment.java:151)
+        at msi.gama.headless.job.ManualExperimentJob.doStep(ManualExperimentJob.java:103)
+        at msi.gama.headless.listener.ServerExperimentController.step(ServerExperimentController.java:445)
+        at msi.gama.headless.listener.ServerExperimentController$MyRunnable.run(ServerExperimentController.java:100)
+        at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
+        at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
+        at java.base/java.lang.Thread.run(Thread.java:833)
+```
+Then you can fix it by modifying a bit the script you use to run gama-headless.
+
+First, at the end of your Gama.ini file, add the following lines:
+```
+--add-exports=java.base/java.lang=ALL-UNNAMED
+--add-exports=java.desktop/sun.awt=ALL-UNNAMED
+--add-exports=java.desktop/sun.java2d=ALL-UNNAMED
+--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED
+--add-exports=java.base/java.math=ALL-UNNAMED
+--add-exports=java.base/java.lang=ALL-UNNAMED
+--add-exports=java.base/sun.nio.ch=ALL-UNNAMED
+--add-opens=java.base/java.lang=ALL-UNNAMED
+--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED
+--add-opens=java.base/java.math=ALL-UNNAMED
+--add-opens=java.base/java.util=ALL-UNNAMED
+--add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
+--add-opens=java.base/java.net=ALL-UNNAMED
+--add-opens=java.base/java.security=ALL-UNNAMED
+--add-opens=java.desktop/java.awt=ALL-UNNAMED
+--add-opens=java.base/java.io=ALL-UNNAMED
+--add-opens=java.base/java.time=ALL-UNNAMED
+--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED
+--add-opens=java.base/java.text=ALL-UNNAMED
+--add-opens=java.base/java.lang.ref=ALL-UNNAMED
+--add-opens=java.sql/java.sql=ALL-UNNAMED-Djava.awt.headless=true
+```
+Then you will need to replace your script to run gama-headless.
+
+### For macOS
+
+replace the `gama-headless.sh` script by this one:
+```sh
+#!/bin/bash
+
+javaVersion=$(java -version 2>&1 | head -n 1 | cut -d "\"" -f 2)
+# Check if good Java version before everything
+if [[ ${javaVersion:2} == 17 ]]; then
+  echo "You should use Java 17 to run GAMA"
+  echo "Found you using version : $javaVersion"
+  exit 1
+fi
+
+memory="0"
+
+for arg do
+  shift
+  case $arg in
+    -m) 
+    memory="${1}" 
+    shift 
+    ;;
+    *) 
+    set -- "$@" "$arg" 
+    ;;
+  esac
+done
+
+if [[ $memory == "0" ]]; then
+  memory=$(grep Xmx "$( dirname "${BASH_SOURCE[0]}" )"/../Eclipse/Gama.ini || echo "-Xmx4096m")
+else
+  memory=-Xmx$memory
+fi
+
+workspaceCreate=0
+case "$@" in 
+  *-help*|*-version*|*-validate*|*-test*|*-xml*|*-batch*|*-write-xmi*|*-socket*)
+    workspaceCreate=1
+    ;;
+esac
+
+function read_from_ini {
+  start_line=$(grep -n -- '-server' "$( dirname $( realpath "${BASH_SOURCE[0]}" ) )"/../Gama.ini | cut -d ':' -f 1)
+  tail -n +12 "$( dirname $( realpath "${BASH_SOURCE[0]}" ) )"/../Gama.ini | tr '\n' ' '
+  #       👆 with the + you basically tell tail to start from the 12th line starting from the top of the file, not the end
+}
+
+echo "******************************************************************"
+echo "* GAMA version 1.9.3                                             *"
+echo "* http://gama-platform.org                                       *"
+echo "* (c) 2007-2023 UMI 209 UMMISCO IRD/SU & Partners                *"
+echo "******************************************************************"
+passWork=.workspace
+# w/ output folder
+if [ $workspaceCreate -eq 0 ]; then
+  # create output folder if not existing
+  if [ ! -d "${@: -1}" ]; then
+      mkdir ${@: -1}
+  fi
+  # create workspace in output folder
+  # `expr` use is to remove whitespace from MacOS's result
+  passWork=${@: -1}/.workspace$(find ${@: -1} -name ".workspace*" | expr $(wc -l))
+  mkdir -p $passWork
+
+# w/o output folder
+else
+  # create workspace in current folder
+  passWork=.workspace$(find ./ -maxdepth 1 -name ".workspace*" | expr $(wc -l))
+fi
+
+ini_arguments=$(read_from_ini)
+
+if ! java -cp "$( dirname "${BASH_SOURCE[0]}" )"/../Eclipse/plugins/org.eclipse.equinox.launcher*.jar -Xms512m $memory ${ini_arguments[@]} -Djava.awt.headless=true org.eclipse.core.launcher.Main -configuration "$( dirname "${BASH_SOURCE[0]}" )"/configuration -application msi.gama.headless.product -data $passWork "$@"; then
+    echo "Error in you command, here's the log :"
+    cat $passWork/.metadata/.log
+    exit 1
+fi
+```
+
+
+### For Linux
+
+replace the `gama-headless.sh` script by this one:
+```sh
+#!/bin/bash
+
+javaVersion=$(java -version 2>&1 | head -n 1 | cut -d "\"" -f 2)
+# Check if good Java version before everything
+if [[ ${javaVersion:2} == 17 ]]; then
+  echo "You should use Java 17 to run GAMA"
+  echo "Found you using version : $javaVersion"
+  exit 1
+fi
+
+memory="0"
+
+for arg do
+  shift
+  case $arg in
+    -m) 
+    memory="${1}" 
+    shift 
+    ;;
+    *) 
+    set -- "$@" "$arg" 
+    ;;
+  esac
+done
+
+if [[ $memory == "0" ]]; then
+  memory=$(grep Xmx "$( dirname $( realpath "${BASH_SOURCE[0]}" ) )"/../Gama.ini || echo "-Xmx4096m")
+else
+  memory=-Xmx$memory
+fi
+
+workspaceCreate=0
+case "$@" in 
+  *-help*|*-version*|*-validate*|*-test*|*-xml*|*-batch*|*-write-xmi*|*-socket*)
+    workspaceCreate=1
+    ;;
+esac
+
+
+function read_from_ini {
+  start_line=$(grep -n -- '-server' "$( dirname $( realpath "${BASH_SOURCE[0]}" ) )"/../Gama.ini | cut -d ':' -f 1)
+  tail -n +12 "$( dirname $( realpath "${BASH_SOURCE[0]}" ) )"/../Gama.ini | tr '\n' ' '
+  #       👆 with the + you basically tell tail to start from the 12th line starting from the top of the file, not the end
+}
+
+echo "******************************************************************"
+echo "* GAMA version 1.9.3                                             *"
+echo "* http://gama-platform.org                                       *"
+echo "* (c) 2007-2023 UMI 209 UMMISCO IRD/SU & Partners                *"
+echo "******************************************************************"
+passWork=.workspace
+# w/ output folder
+if [ $workspaceCreate -eq 0 ]; then
+  # create output folder if not existing
+  if [ ! -d "${@: -1}" ]; then
+      mkdir ${@: -1}
+  fi
+  # create workspace in output folder
+  passWork=${@: -1}/.workspace$(find ${@: -1} -name ".workspace*" | wc -l)
+  mkdir -p $passWork
+
+# w/o output folder
+else
+  # create workspace in current folder
+  passWork=.workspace$(find ./ -maxdepth 1 -name ".workspace*" | wc -l)
+fi
+
+ini_arguments=$(read_from_ini)
+
+if ! java -cp "$( dirname $( realpath "${BASH_SOURCE[0]}" ) )"/../plugins/org.eclipse.equinox.launcher*.jar -Xms512m $memory ${ini_arguments[@]} org.eclipse.core.launcher.Main -configuration "$( dirname $( realpath "${BASH_SOURCE[0]}" ) )"/configuration -application msi.gama.headless.product -data $passWork "$@"; then
+    echo "Error in you command, here's the log :"
+    cat $passWork/.metadata/.log
+    exit 1
+fi
+```
+
+### For Windows
+
+replace the `gama-headless.bat` script by this one:
+```bash
+
+```
+
 ## Submitting an Issue
 If you think you have found a new bug/issue in GAMA, it is time to create an issue report [here](https://github.com/gama-platform/gama/issues/new)! Alternatively, you can click the [Issues](https://github.com/gama-platform/gama/issues) tab on the project site, search if a similar problem has already been reported (and, maybe, solved) and, if not, enter a new issue with as much information as possible:
 
